[gd_scene load_steps=7 format=2]

[ext_resource path="res://Juego/interfaz/contenedor_zanahorias.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/interfaz/contenedor_vidas.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/interfaz/contenedormoneda_oro.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/interfaz/contenedormoneda_plata.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/interfaz/contenedormoneda_bronze.tscn" type="PackedScene" id=5]
[ext_resource path="res://Juego/interfaz/HUD.gd" type="Script" id=6]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.12244
margin_top = -1.12244
margin_right = 1.12244
margin_bottom = -1.12244
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 159.375 ],
"_edit_use_anchors_": false
}

[node name="contenedor_vidas" parent="." instance=ExtResource( 2 )]
margin_left = 8.97971
margin_top = 13.4695
margin_right = 176.98
margin_bottom = 84.4695

[node name="contenedor_zanahorias" parent="." instance=ExtResource( 1 )]
margin_left = 8.97971
margin_top = 86.8445
margin_right = 176.98
margin_bottom = 157.845

[node name="contenedormoneda_bronze" parent="." instance=ExtResource( 5 )]
margin_left = -205.0
margin_top = 104.0
margin_bottom = 155.0

[node name="contenedormoneda_oro" parent="." instance=ExtResource( 3 )]
margin_left = -205.0
margin_top = 2.0
margin_right = 1.0
margin_bottom = 54.0

[node name="contenedormoneda_plata" parent="." instance=ExtResource( 4 )]
margin_left = -205.0
margin_top = 53.0
margin_right = 1.0
margin_bottom = 102.0
